# buccdess-sense-enjambre

./: .gitignore  ARQUITECTURA.md  GETTING_STARTED.md  README.md
backend/: pyproject.toml
backend/app/api/: simulation.py
backend/app/services/: article_ontology.py  simulation_manager.py  zep_article_graph.py
backend/app/services/caba_cohort/: __init__.py  censo_parser.py  cohort_builder.py  ecological_inference.py  source.py
backend/app/services/caba_cohort/data/: c2022_caba_actividad_economica_c2_1.xlsx  c2022_caba_educacion_c3_1.xlsx
frontend/: index.html
frontend/src/api/: simulation.js
frontend/src/components/: CohortHistoryList.vue  HistoryDatabase.vue  OntologyPanel.vue
frontend/src/i18n/: index.js
frontend/src/router/: index.js
frontend/src/views/: CohortResultView.vue  CohortRunView.vue  CohortSetupView.vue  Home.vue  MainView.vue  SimulationRunView.vue  SimulationView.vue
locales/: es.json
research/fase0/: DOCUMENTACION.md  README.md  pyproject.toml
research/fase0/notebooks/: 01_exploracion_caba_2023.py  02_exploracion_censo_caba.py  03_join_voto_educacion.py  04_catalogo_cuadros.py  05_inspect_actividad_c2.py  06_inspect_educacion_c3.py  07_validacion_sampler.py  08_demo_end_to_end.py  09_demo_slicing.py  10_validacion_fase_c.py  11_demo_llm_reactions.py  12_reaccion_articulo.py
research/fase0/sampler/: __init__.py  electoral_parser.py  oasis_adapter.py
